# pyquartic

./: README.md  compile_numba.py  pyproject.toml  pyquartic_nonumba.py  pyquartic_numba.py  setup.py  test_pyquartic.py
.github/workflows/: build-and-publish.yml  build-and-release-gh.yml  release-pypi.yml
