[build-system]
requires = ["setuptools", "numba"]
build-backend = "setuptools.build_meta"

[project]
name = "pyquartic"
version = "0.1.4"
description = "Fast and highly accurate cubic and quartic equation solvers"
authors = [{name = "sparklost"}]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.9, <3.14"
dependencies = ["numpy"]
keywords = [
    "polynomial",
    "equation solver",
    "quartic",
    "cubic",
    "root finding",
    "numba",
    "math",
    "algebra",
    "fast solver",
    "high precision"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/sparklost/pyquartic"
"Bug Reports" = "https://github.com/sparklost/pyquartic/issues"
"Source" = "https://github.com/sparklost/pyquartic"

[tool.setuptools]
packages = ["pyquartic"]
include-package-data = true

[tool.cibuildwheel]
build = "*"
before-build = "pip install numba setuptools wheel"
